goaldetail 생성/ routineEdit 수정 / exerciseMain 일부 반영 / goallist 이벤트버블링 수정/ routinelist 이벤트버블링 수정/ 목표가 근육증가일 때 컨디션 설정창에 갇히는 오류 해결 / 루틴 생성시 자동으로 select되는 로직 추가/ *******routineEdit 수정일 때 / 생성일때 완료버튼 누른 put / post 처리 해결 요망*********